WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83792
REGRESSION (
r113900
): In nightly builds, Safari Webpage Preview Fetcher crashes in Settings::initializeDefaultFontFamilies() due to uncaught exception (sandbox preventing access to fonts plist)
https://bugs.webkit.org/show_bug.cgi?id=83792
Summary
REGRESSION (r113900): In nightly builds, Safari Webpage Preview Fetcher crash...
Alexey Proskuryakov
Reported
2012-04-12 10:21:02 PDT
Crashes when opening Top Sites. <
rdar://problem/11234002
>
Attachments
proposed fix
(2.16 KB, patch)
2012-04-12 10:27 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-04-12 10:27:41 PDT
Created
attachment 136927
[details]
proposed fix
mitz
Comment 2
2012-04-12 10:58:31 PDT
Comment on
attachment 136927
[details]
proposed fix r=me assuming you tested this
Alexey Proskuryakov
Comment 3
2012-04-12 11:11:53 PDT
Committed <
http://trac.webkit.org/changeset/114004
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug