        REGRESSION (r113900): In nightly builds, Safari Webpage Preview Fetcher crashes in Settings::initializeDefaultFontFamilies() due to uncaught exception (sandbox preventing access to fonts plist)         https://bugs.webkit.org/show_bug.cgi?id=83792         <rdar://problem/11234002>

Reviewed by Dan Bernstein.

        * page/mac/SettingsMac.mm: (WebCore::defaultFontFamilyDictionary): Bail out without setting
        font preferences if the process doesn't have read access to WebCore.framework.



Canonical link: https://commits.webkit.org/101299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114004 268f45cc-cd09-0410-ab3c-d52691b4dbfc